--- a/index.html
+++ b/index.html
@@ -1922,8 +1922,10 @@ the projection functions.</p>
 </div>
 <div id="other-vignettes" class="section level1">
 <h1>Other vignettes</h1>
-<pre class="r"><code># Visualizing gene sets in PathwaySpace
-vignette(&quot;visualizing-gene-sets&quot;, package = &quot;PathwaySpace&quot;)</code></pre>
+<div id="visualizing-gene-sets" class="section level2">
+<h2>Visualizing gene sets</h2>
+<p><a href="https://sysbiolab.github.io/PathwaySpace/visualizing-gene-sets.html" class="uri">https://sysbiolab.github.io/PathwaySpace/visualizing-gene-sets.html</a></p>
+</div>
 </div>
 <div id="citation" class="section level1">
 <h1>Citation</h1>
