--- a/index.html
+++ b/index.html
@@ -1920,12 +1920,9 @@ simply set the <code>rescale</code> argument to <code>FALSE</code> in
 the projection functions.</p>
 </div>
 </div>
-<div id="other-vignettes" class="section level1">
-<h1>Other vignettes</h1>
-<div id="visualizing-gene-sets" class="section level2">
-<h2>Visualizing gene sets</h2>
-<p><a href="https://sysbiolab.github.io/PathwaySpace/visualizing-gene-sets.html" class="uri">https://sysbiolab.github.io/PathwaySpace/visualizing-gene-sets.html</a></p>
-</div>
+<div id="other-examples" class="section level1">
+<h1>Other examples</h1>
+<p><a href="https://sysbiolab.github.io/PathwaySpace/visualizing-large-graphs.html" target="_blank" rel="noopener">Visualizing large graphs</a></p>
 </div>
 <div id="citation" class="section level1">
 <h1>Citation</h1>
