--- a/index.html
+++ b/index.html
@@ -1922,7 +1922,8 @@ the projection functions.</p>
 </div>
 <div id="other-examples" class="section level1">
 <h1>Other examples</h1>
-<p><a href="https://sysbiolab.github.io/PathwaySpace/visualizing-large-graphs.html" target="_blank" rel="noopener">Visualizing large graphs</a></p>
+<p><a href="https://sysbiolab.github.io/PathwaySpace/visualizing-feature-sets.html" target="_blank" rel="noopener">Visualizing feature sets in large
+<em>PathwaySpace</em> graphs</a></p>
 </div>
 <div id="citation" class="section level1">
 <h1>Citation</h1>
