--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-08-23" />
+<meta name="date" content="2025-08-24" />
 
 <title>PathwaySpace: Spatial projection of network signals along geodesic paths.</title>
 
@@ -1620,7 +1620,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore"><em>PathwaySpace</em>: Spatial projection
 of network signals along geodesic paths.</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-08-23</h4>
+<h4 class="date">2025-08-24</h4>
 <div class="abstract">
 <p class="abstract">Abstract</p>
 <em>PathwaySpace</em> is an R package that creates landscape images from
@@ -1882,10 +1882,10 @@ plotPathwaySpace(p_space2, theme = &quot;th2&quot;, marks = c(&quot;n1&quot;,&qu
 <p>This <em>PathwaySpace</em> polar projection emphasizes the signal
 flow along the directional pattern of a directed graph (see the
 <em>igraph</em> plot above). When interpreting, users should note that
-this approach introduces simplifications. For example, depending on the
-network topology, the polar projection may not capture some common
-features of a directed graph, such as cyclic dependencies, feedforward
-and feedback loops, or other intricate edge interplays.</p>
+this approach introduces simplifications; for example, depending on the
+network topology, the polar projection may fail to capture complex
+features of directed graphs, such as cyclic dependencies, feedforward
+and feedback loops, or other intricate interactions.</p>
 </div>
 <div id="signal-types" class="section level2">
 <h2>Signal types</h2>
