--- a/install.html
+++ b/install.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-09-25" />
+<meta name="date" content="2025-09-26" />
 
 <title>Installation Instructions</title>
 
@@ -290,7 +290,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Installation Instructions</h1>
-<h4 class="date">2025-09-25</h4>
+<h4 class="date">2025-09-26</h4>
 
 </div>
 
@@ -304,7 +304,7 @@ required.</p>
 install.packages(&quot;PathwaySpace&quot;)</code></pre>
 <p><br/></p>
 </div>
-<div id="revelopment-version" class="section level3">
+<div id="development-version" class="section level3">
 <h3>Development version</h3>
 <pre class="r"><code># Dependencies to build the vignettes
 install.packages(&quot;knitr&quot;)
