--- a/visualizing-feature-sets.html
+++ b/visualizing-feature-sets.html
@@ -11,9 +11,9 @@
 
 <meta name="author" content="TCGA Analysis Network" />
 
-<meta name="date" content="2025-09-25" />
+<meta name="date" content="2025-09-26" />
 
-<title>Visualizing feature sets in large PathwaySpace graphs</title>
+<title>Visualizing feature sets in large graphs</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -390,9 +390,9 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Visualizing feature sets in large
-<em>PathwaySpace</em> graphs</h1>
+graphs</h1>
 <h4 class="author">TCGA Analysis Network</h4>
-<h4 class="date">2025-09-25</h4>
+<h4 class="date">2025-09-26</h4>
 
 </div>
 
@@ -494,6 +494,7 @@ silhouettes.</p>
 p_space_PCv12 &lt;- silhouetteMapping(p_space_PCv12)
 plotPathwaySpace(p_space_PCv12, title=&quot;HALLMARK_P53_PATHWAY&quot;, marks = top10hubs, mark.size = 2, theme = &quot;th3&quot;)</code></pre>
 <p><img src="figs_feature_sets/fig2.png" width="100%" /></p>
+<p><br/></p>
 </div>
 <div id="mapping-summits" class="section level2">
 <h2>Mapping summits</h2>
