--- a/get-started.html
+++ b/get-started.html
@@ -303,6 +303,15 @@ $(document).ready(function () {
 
 <div id="introductory-vignettes" class="section level1">
 <h1>Introductory vignettes</h1>
+<p>These tutorials introduce <em>PathwaySpace</em> using simple toy
+examples: <a href="projection-methods.html"><strong>Network Signal
+Projections</strong></a> walks through the main <em>PathwaySpace</em>
+projection methods; <a href="modeling-signal-decay.html"><strong>Signal
+Decay Functions</strong></a> describes how to set up decay functions to
+model specific network nodes; and <a
+href="signal-aggregation-rules.html"><strong>Signal Aggregation
+Rules</strong></a> demonstrates how to configure and explore signal
+aggregation rules to emphasize patterns in the data.</p>
 <div>
 <div class="row p-0 row-cols-1 row-cols-md-2 row-cols-lg-3" style="margin-left: -.2rem; margin-right: -.2rem; margin-top: 1rem; margin-bottom: 1rem; ">
 <div class="card bg-transparent m-0 border-0 collapse.show bs4cards-blahblahblah " style="padding: .2rem ; border-width: 0; border-radius: 1rem 1rem 1rem 1rem ;">
@@ -340,6 +349,14 @@ $(document).ready(function () {
 </div>
 <div id="visualizing-features-in-pathwayspace" class="section level1">
 <h1>Visualizing features in <em>PathwaySpace</em></h1>
+<p>These tutorials showcase <em>PathwaySpace</em> applied to real-world
+scenarios, highlighting complex feature patterns. The <a
+href="sparse-feature-sets.html"><strong>Sparse Feature Sets</strong></a>
+vignette demonstrates how to analyze feature signals when only a limited
+number of nodes carry relevant information, while the <a
+href="spatial-transcriptomics-doc1.html"><strong>Spatial
+Transcriptomics</strong></a> vignette illustrates how to project gene
+expression signals across tissue sections.</p>
 <div>
 <div class="row p-0 row-cols-1 row-cols-md-2 row-cols-lg-3" style="margin-left: -.2rem; margin-right: -.2rem; margin-top: 1rem; margin-bottom: 1rem; ">
 <div class="card bg-transparent m-0 border-0 collapse.show bs4cards-blahblahblah " style="padding: .2rem ; border-width: 0; border-radius: 1rem 1rem 1rem 1rem ;">
