--- a/get-started.html
+++ b/get-started.html
@@ -301,6 +301,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><strong>Package</strong>: PathwaySpace 1.0.3 <br/></p>
 <div id="introductory-vignettes" class="section level1">
 <h1>Introductory vignettes</h1>
 <p>These tutorials introduce <em>PathwaySpace</em> using simple toy
