--- a/signal-aggregation-rules.html
+++ b/signal-aggregation-rules.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-04" />
+<meta name="date" content="2025-10-05" />
 
 <title>Creating signal aggregation rules</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Creating signal aggregation rules</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-04</h4>
+<h4 class="date">2025-10-05</h4>
 
 </div>
 
@@ -380,10 +380,10 @@ div.tocify {
 <p><strong>Package</strong>: PathwaySpace 1.0.3 <br/></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>This tutorial demonstrates how to setup signal aggregation rules for
-<em>PathwaySpace</em> projections. Using a toy graph with five small
-islands, we illustrate how different aggregation functions can be
-applied to emphasize distinct patterns in the data.</p>
+<p>This tutorial demonstrates how to create signal aggregation functions
+for <em>PathwaySpace</em> projections. A toy graph with five small
+islands is used to demonstrate how different aggregation rules can
+emphasize patterns in the data.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
