--- a/get-started.html
+++ b/get-started.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-04" />
+<meta name="date" content="2025-10-05" />
 
 <title>Getting started with PathwaySpace</title>
 
@@ -296,7 +296,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Getting started with PathwaySpace</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-04</h4>
+<h4 class="date">2025-10-05</h4>
 
 </div>
 
@@ -311,8 +311,8 @@ projection methods; <a href="modeling-signal-decay.html"><strong>Signal
 Decay Functions</strong></a> describes how to set up decay functions to
 model specific network nodes; and <a
 href="signal-aggregation-rules.html"><strong>Signal Aggregation
-Rules</strong></a> demonstrates how to configure and explore signal
-aggregation rules to emphasize patterns in the data.</p>
+Rules</strong></a> demonstrates how to create signal aggregation
+functions to emphasize patterns in the data.</p>
 <div>
 <div class="row p-0 row-cols-1 row-cols-md-2 row-cols-lg-3" style="margin-left: -.2rem; margin-right: -.2rem; margin-top: 1rem; margin-bottom: 1rem; ">
 <div class="card bg-transparent m-0 border-0 collapse.show bs4cards-blahblahblah " style="padding: .2rem ; border-width: 0; border-radius: 1rem 1rem 1rem 1rem ;">
