--- a/signal-aggregation-rules.html
+++ b/signal-aggregation-rules.html
@@ -382,8 +382,8 @@ div.tocify {
 <h1>Overview</h1>
 <p>This tutorial demonstrates how to create signal aggregation functions
 for <em>PathwaySpace</em> projections. A toy graph with five small
-islands is used to demonstrate how different aggregation rules can
-emphasize patterns in the data.</p>
+islands is used to illustrate how different aggregation rules emphasize
+distinct patterns in the data.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
