--- a/get-started.html
+++ b/get-started.html
@@ -294,7 +294,8 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Getting started with PathwaySpace</h1>
+<h1 class="title toc-ignore">Getting started with
+<em>PathwaySpace</em></h1>
 <h4 class="author">Sysbiolab Team</h4>
 <h4 class="date">2025-10-05</h4>
 
