--- a/get-started.html
+++ b/get-started.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-05" />
+<meta name="date" content="2025-10-07" />
 
 <title>Getting started with PathwaySpace</title>
 
@@ -267,7 +267,7 @@ $(document).ready(function () {
       <a href="sparse-feature-sets.html">Sparse feature sets</a>
     </li>
     <li>
-      <a href="spatial-transcriptomics-doc1.html">Spatial transcriptomics</a>
+      <a href="spatial-transcriptomics.html">Spatial transcriptomics</a>
     </li>
   </ul>
 </li>
@@ -297,7 +297,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Getting started with
 <em>PathwaySpace</em></h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-05</h4>
+<h4 class="date">2025-10-07</h4>
 
 </div>
 
@@ -356,7 +356,7 @@ scenarios, highlighting complex feature patterns. The <a
 href="sparse-feature-sets.html"><strong>Sparse Feature Sets</strong></a>
 vignette demonstrates how to analyze feature signals when only a limited
 number of nodes carry relevant information, while the <a
-href="spatial-transcriptomics-doc1.html"><strong>Spatial
+href="spatial-transcriptomics.html"><strong>Spatial
 Transcriptomics</strong></a> vignette illustrates how to project gene
 expression signals across tissue sections.</p>
 <div>
@@ -372,11 +372,11 @@ expression signals across tissue sections.</p>
 </div>
 </div>
 <div class="card bg-transparent m-0 border-0 collapse.show bs4cards-blahblahblah " style="padding: .2rem ; border-width: 0; border-radius: 1rem 1rem 1rem 1rem ;">
-<a href="spatial-transcriptomics-doc1.html" style="color: inherit;">
+<a href="spatial-transcriptomics.html" style="color: inherit;">
 <img src="figs_spot_space/card1.png" class="card-img-top" style="border-style:solid; border-color:inherits; border-width:1px 1px 0 1px; border-radius: 1rem 1rem 0 0 ;"/>
 </a>
 <div class="card-body justify-content-end m-0 p-0" style="visibility: visible; background-color: inherits; border-style:solid; border-color:inherits; border-width:1px; border-radius: 0 0 1rem 1rem ;">
-<a href="spatial-transcriptomics-doc1.html">
+<a href="spatial-transcriptomics.html">
 <h5 class="card-title my-auto px-3 pt-3 pb-3">Spatial Transcriptomics</h5>
 </a>
 </div>
