--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-05" />
+<meta name="date" content="2025-10-07" />
 
 <title>Modeling signal decay functions</title>
 
@@ -343,7 +343,7 @@ div.tocify {
       <a href="sparse-feature-sets.html">Sparse feature sets</a>
     </li>
     <li>
-      <a href="spatial-transcriptomics-doc1.html">Spatial transcriptomics</a>
+      <a href="spatial-transcriptomics.html">Spatial transcriptomics</a>
     </li>
   </ul>
 </li>
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-05</h4>
+<h4 class="date">2025-10-07</h4>
 
 </div>
 
