--- a/projection-methods.html
+++ b/projection-methods.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-05" />
+<meta name="date" content="2025-10-07" />
 
 <title>Network signal projections</title>
 
@@ -343,7 +343,7 @@ div.tocify {
       <a href="sparse-feature-sets.html">Sparse feature sets</a>
     </li>
     <li>
-      <a href="spatial-transcriptomics-doc1.html">Spatial transcriptomics</a>
+      <a href="spatial-transcriptomics.html">Spatial transcriptomics</a>
     </li>
   </ul>
 </li>
@@ -374,7 +374,7 @@ div.tocify {
 <h3 class="subtitle">A guided tutorial on <em>PathwaySpace</em>
 projection methods</h3>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-05</h4>
+<h4 class="date">2025-10-07</h4>
 
 </div>
 
