--- a/sparse-feature-sets.html
+++ b/sparse-feature-sets.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-05" />
+<meta name="date" content="2025-10-07" />
 
 <title>Visualizing sparse feature sets on large graphs</title>
 
@@ -366,7 +366,7 @@ div.tocify {
       <a href="sparse-feature-sets.html">Sparse feature sets</a>
     </li>
     <li>
-      <a href="spatial-transcriptomics-doc1.html">Spatial transcriptomics</a>
+      <a href="spatial-transcriptomics.html">Spatial transcriptomics</a>
     </li>
   </ul>
 </li>
@@ -396,7 +396,7 @@ div.tocify {
 <h1 class="title toc-ignore">Visualizing sparse feature sets on large
 graphs</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-05</h4>
+<h4 class="date">2025-10-07</h4>
 
 </div>
 
