--- a/modeling-signal-decay.html
+++ b/modeling-signal-decay.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-08" />
+<meta name="date" content="2025-10-10" />
 
 <title>Modeling signal decay functions</title>
 
@@ -372,7 +372,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Modeling signal decay functions</h1>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-08</h4>
+<h4 class="date">2025-10-10</h4>
 
 </div>
 
@@ -381,12 +381,12 @@ div.tocify {
 <div id="overview" class="section level1">
 <h1>Overview</h1>
 <p>In this tutorial, we demonstrate how to model signal decay functions
-targeted at specific nodes. Using a simple lattice graph, we illustrate
-how different decay functions influence the propagation of signals
-across a network. Nodes in this graph represent spots, providing an
-intuitive starting point for understanding how <em>PathwaySpace</em>
-methods can be used to capture behaviors in larger or more complex
-graphs from spatial transcriptomics data.s</p>
+targeted at specific nodes. Using a simple lattice graph, we describe
+the steps to create and apply different decay functions for
+<em>PathwaySpace</em> projections. Nodes in this example represent
+spots, providing an intuitive starting for understanding how these
+functions can be used to capture behaviors in larger or more complex
+graphs, such as from spatial transcriptomics data.</p>
 </div>
 <div id="setting-basic-input-data" class="section level1">
 <h1>Setting basic input data</h1>
